# dbt-denodo

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  test.env.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dbt/adapters/denodo/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/denodo/: dbt_project.yml  profile_template.yml
dbt/include/denodo/macros/: adapters.sql  catalog.sql
dbt/include/denodo/macros/materializations/: incremental.sql  snapshot.sql  table.sql  view.sql
dbt/include/denodo/macros/materializations/seeds/: helpers.sql
tests/: conftest.py
tests/functional/adapter/: test_basic.py
tests/unit/: test_adapter.py  test_connections.py  test_credentials.py
